--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -9,6 +9,7 @@
           <div class=" row pt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-10">
             
             <div>
+              
               <b><h1 class="txt-noticia-inicio">Sofware de gestión en salud</h1></b>
               <b><h3 class="txt-noticia-inicio pb-5 text-blue"><p>"Pensado para todos los profesionales de la salud"
                 
@@ -23,127 +24,163 @@
       </div>
 
         <div class="row">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
           <div>
+              <div class="card">
+                  <div class="card-body">
             <b><h3 class="txt-noticia-inicio">¿En que me beneficia el uso de este software?</h3></b>
             <b><p class="txt-noticia-inicio pb-5 text-blue">Es un sofware en la nube, con esta tecnólogia  podes consultar tu agenda y ver tus historias clínicas donde quieras y desde cualquier dispositivo</p></b>
-            
+          </div>
+        </div>
             <br>
           </div>
         </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
       </div>
 
       
        
       <div class="row ">
-          <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-      <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+          <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+      <div class=" row  d-flex justify-content-center col-sm-12 ml-2 col-md-6">
           <div>
-            <b><h3 class="txt-noticia-inicio">¿Si mi trabajo de desarrolla en distintas clíncas puedo tener distintas agendas?</h3></b>
+              <div class="card">
+                  <div class="card-body">
+            <b><h3 class="txt-noticia-inicio">¿Si mi trabajo se desarrolla en distintas clíncas puedo tener distintas agendas?</h3></b>
             <b><p class="txt-noticia-inicio pb-5 text-blue">Si, dependiendo del modulo que elijas puedes administrar distintas clinicas y tener tus  agendas para cada una de ellas. Incluso puedes amplicar la cantidad de clínicas</p></b>
-            
+          </div>
+        </div>
             <br>
           </div>
         </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
       </div>
 
-        <div class="row background-principal-1">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+        <div class="background-slide-1">
+        <div class="row ">
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
           <div>
+              <div class="card">
+                  <div class="card-body">
             <b><h3 class="txt-noticia-inicio">Tengo una secretaria que se encarga de la gestión de mis turnos, ¿puedo agregarla al sistema?</h3></b>
             <b><p class="txt-noticia-inicio pb-5 text-blue">Podes elegir que usuario es un "Médico"  y asignar roles a cada usuario (Ejemplo : Una secretaria podra dar turnos, pero no podra modificar historias clinicas), 
               si contas con personal administrativo podes asignarle roles de facturación , auditoria y liquidación </p></b>
-            
+            </div>
+          </div>
             <br>
           </div>
         </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
       </div>
 
 
-        <div class="row background-principal-1">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+        <div class="row ">
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
           <div>
+              <div class="card">
+                  <div class="card-body">
             <b><h3 class="txt-noticia-inicio">¿Somos un grupo de profesionales , podemos trabajar con una misma cuenta?</h3></b>
             <b><p class="txt-noticia-inicio pb-5 text-blue">Cada módulo tiene una cantidad de usuarios que puede ser ampliada. Puedes combinar los usuarios y clínicas para tener tu agenda organizada </p></b>
-            
+          </div>
+        </div>
             <br>
           </div>
         </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
       </div>
+    </div>
 
-        <div class="row background-principal-3">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+        <div class="row background-principal-3 ">
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
           <div>
+              <div class="card">
+                  <div class="card-body">
             <b><h3 class="txt-noticia-inicio">¿Necesito saber cuantas ordenes realize y cuanto deberia cobrar?</h3></b>
             <b><p class="txt-noticia-inicio pb-5 text-blue">El modulo "CLINICAS" te permite realizar cobros,  cargar ordenes y obtener un resúmen de tus consultas. Asi siempre sabras tu estado financiero </p></b>
-            
+          </div>
+        </div>
             <br>
           </div>
         </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
       </div>
 
         <div class="row background-principal-3">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
           <div>
+              <div class="card">
+                  <div class="card-body">
             <b><h3 class="txt-noticia-inicio">¿Como controlo las ordenes recibidas de obras sociales?</h3></b>
             <b><p class="txt-noticia-inicio pb-5 text-blue">Puedes realizar operaciones de cobro de obras sociales y agruparlas para saber cuantas ordenes  presentaron. clinicAZ posee un módulo muy potente para gestionar todas las obras sociales con sus respectivas modalidades </p></b>
-            
+          </div>
+        </div>
             <br>
           </div>
         </div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+        <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
       </div>
 
 
-        
-        <div class="row background-principal-2">
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-        <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+      <div class="background-slide-1">
+        <div class="row ">
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+        <div class=" row mt-5 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
             <div>
+                <div class="card">
+                    <div class="card-body">
               <b><h3 class="txt-noticia-inicio">¿Puedo realizar factura electrónica?</h3></b>
               <b><p class="txt-noticia-inicio pb-5 text-blue">Si, solo debes pasarnos el certificado ".crt" y la key ".key" que generas en tu perfil de AFIP, luego podras configurar tu punto de venta  </p></b>
-              
+            </div>
+          </div>
               <br>
             </div>
           </div>
-          <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+          <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
         </div>
 
-          <div class="row background-principal-2">
-              <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-          <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+          <div class="row ">
+              <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+          <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
               <div>
-                <b><h3 class="txt-noticia-inicio">Le solicité a mi paciente estudios ¿uedo adjuntarlos a su historia clínica?</h3></b>
+                  <div class="card">
+                      <div class="card-body">
+                <b><h3 class="txt-noticia-inicio">Le solicité a mi paciente estudios ¿Puedo adjuntarlos a su historia clínica?</h3></b>
                 <b><p class="txt-noticia-inicio pb-5 text-blue">Puedes subir los estudios a la historia clínica en formato PDF JPG y PNG, existe un limite en el tamaño de subida del archivo asi que ten en cuenta   </p></b>
-                
+                   
+              </div>
+            </div>
                 <br>
               </div>
             </div>
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
           </div>
-            
+        </div>
 
           <div class="row">
-              <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
-          <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-8">
+              <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
+          <div class=" row pt-2 d-flex justify-content-center col-sm-12 ml-2 col-md-6">
               <div>
-                <b><h3 class="txt-noticia-inicio">En mi provincia la obra social D.O.S solicita distintos requerimientos a los de otras obras sociales</h3></b>
-                <b><p class="txt-noticia-inicio pb-5 text-blue">Contemplamos todos los procesos de D.O.S desde consultas hasta cirugias, tanto como su presentación  en papel y archivo .TXT, y sus coseguros </p></b>
+                  <div class="card">
+                      <div class="card-body">
+                 
+                        <b><h3 class="txt-noticia-inicio card-title">En mi provincia la obra social D.O.S solicita distintos requerimientos a los de otras obras sociales</h3></b>
+                        <b><p class="txt-noticia-inicio pb-5 text-blue card-text">Contemplamos todos los procesos de D.O.S desde consultas hasta cirugias, tanto como su presentación  en papel y archivo .TXT, y sus coseguros </p></b>
+
+                      
+                      </div>
+                    </div>
+                
+           
                 
                 <br>
               </div>
             </div>
-            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-2">	</div>
+            <div class=" row pt-2 d-flex justify-content-center col-sm-0 ml-2 col-md-2 col-lg-3">	</div>
           </div>
             
 </div>
