--- a/src/app/pageses/institucional/contacto/contacto.component.html
+++ b/src/app/pageses/institucional/contacto/contacto.component.html
@@ -2,24 +2,29 @@
   <div class=" row ">
     
     	
-			<div class=" col-md-6 col-sm-12 col-xs-12  transparency-contacto  col-sm-ml-2 col-sm-mr-2 animated slideInLeft mt-5">
+			<div class=" col-md-6 col-sm-12 col-xs-12    col-sm-ml-2 col-sm-mr-2 animated slideInLeft mt-5">
           <div class="row ">
             	<div class="col-md-4 col-sm-0 ol-xs-0"></div>
               <div class="col-md-7 col-sm-12 col-xs-12 m-2 pt-5 pb-5 col-sm-ml-2 col-sm-mr-2 mt-5">
                   <br>
-                   <h3 class="txt-noticia-inicio d-sm-block d-none"><i class="far fa-clock mr-2"></i>  Lunes  a viernes</h3>
-                  <h3 class="txt-noticia-inicio mr-2 d-sm-block d-none">De 8:00 a 20:00 hs.</h3>
+                  <div class="card">
+                      <div class="card-header"><h1 class=" text-blue texto-oxygen">CONTACTO</h1></div>
+                      <div class="card-body">
+                   <h3 class="txt-noticia-inicio d-sm-block d-none d-flex justify-content.center text-blue"><i class="far fa-clock mr-2"></i> Horarios de atención:   Lunes  a viernes</h3>
+                  <h3 class="txt-noticia-inicio mr-2 d-sm-block d-none text-blue">De 8:00 a 20:00 hs.</h3>
                   <br>
-                  <h3 class="txt-noticia-inicio d-sm-block d-none"><i class="fas fa-phone mr-2"></i>  0264 5453019</h3>
+                  <h3 class="txt-noticia-inicio d-sm-block d-none text-blue"><i class="fas fa-phone mr-2"></i>  +54 9 264 5453019</h3>
                   <br>
-                  <h3 class="txt-noticia-inicio d-sm-block d-none"><i class="far fa-envelope mr-2"></i> info@clinicaz.com.ar</h3>
+                  <h3 class="txt-noticia-inicio d-sm-block d-none text-blue"><i class="far fa-envelope mr-2"></i> Contacto: info@clinicaz.com.ar</h3>
                  
-                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none"><i class="far fa-clock mr-2"></i>Lun. a vie. De 8:00 a 20:00 hs.</h5>
+                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="far fa-clock mr-2"></i>  Horarios de atención:  Lun. a vie. De 8:00 a 20:00 hs.</h5>
                   
                   <br>
-                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none"><i class="fas fa-phone mr-2"></i>  00264 5453019</h5>
+                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="fas fa-phone mr-2"></i>  +54 9 264 5453019</h5>
                   <br>
-                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none"><i class="far fa-envelope mr-2"></i> info@clinicaz.com.ar</h5>
+                  <h5 class="txt-noticia-inicio d-none d-sm-block d-block d-sm-none d-md-none text-blue"><i class="far fa-envelope mr-2"></i>Contacto:  info@clinicaz.com.ar</h5>
+                </div>
+              </div>
               </div>
               <div class="col-md-1 col-sm-0 col-xs-0"></div>
         </div>
